--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -22,3 +22,13 @@ AUTH_DISCORD_SECRET=""
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
+
+#modal
+PROCESS_VIDEO_ENDPOINT=""
+PROCESS_VIDEO_ENDPOINT_AUTH=""
+
+#aws
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_KEY=""
+AWS_REGION=""
+S3_BUCKET_NAME=""
