--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,12 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
     "@aws-sdk/client-s3": "^3.896.0",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "inngest": "^3.43.1",
@@ -33,12 +37,14 @@
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.63.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
