--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,9 +35,12 @@
     "lucide-react": "^0.544.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.63.0",
+    "sonner": "^2.0.7",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
   },
