--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -29,6 +29,6 @@ PROCESS_VIDEO_ENDPOINT_AUTH=""
 
 #aws
 AWS_ACCESS_KEY_ID=""
-AWS_SECRET_KEY=""
+AWS_SECRET_KEY_ID=""
 AWS_REGION=""
 S3_BUCKET_NAME=""
